fixed spacing between the slider and content boxes. added #content wrap

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ a {
     top: 0;  
     left: 0;  
     width: 100%;  
-	height: 60px;
+	height: 43px;
 	background: white;
 	/* shadows */ 
     box-shadow: 0 1px 8px #AAA;
@@ -43,7 +43,7 @@ a {
 	position: fixed;
 	width: 28px;
 	height: 28px;
-    top:15px;
+    top: 5px;
 	left: 30px;
 	font-size: 20px;
 	font-style: italic; 
@@ -65,7 +65,7 @@ a {
 #navMenu {
 	width: 400px;
 	height: 40px;
-	margin: 10px;
+	margin: 2px 10px;
 	float: right;
 }
 
@@ -94,8 +94,8 @@ ul.list {
 /* メイン部の設定 */
 #main {
 	  min-height: 1600px;
-	  margin: 70px auto;
-	  padding: 15px 15px;
+	  margin: 50px auto;
+	  padding: 20px 15px;
 }
 
 
@@ -117,6 +117,15 @@ ul.list {
 
 #fbm {
 	background: url(../images/fbm.png) 0 0 no-repeat; 
+}
+
+#contentWrap {
+	position: absolute;
+	padding: 40px 0px;
+	width: 968px;
+	height: auto;
+	border-top: solid 1px #EEE;
+	border-bottom: solid 1px #EEE;
 }
 
 .content {
